Colaboratory를 통해 생성됨

--- a/Chapter_04_함수의_이해_.ipynb
+++ b/Chapter_04_함수의_이해_.ipynb
@@ -77,11 +77,11 @@
       "metadata": {
         "id": "NbdY63escQaX",
         "colab_type": "code",
+        "outputId": "ac09a7cb-e9fe-4547-a6a3-247d69dbc1e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "ac09a7cb-e9fe-4547-a6a3-247d69dbc1e4"
+        }
       },
       "source": [
         "# 내장 함수의 예\n",
@@ -92,7 +92,7 @@
         "summation=sum(a)\n",
         "print(summation)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,11 +128,11 @@
       "metadata": {
         "id": "EqnacFbRcQad",
         "colab_type": "code",
+        "outputId": "33a8ac09-e865-4b30-919c-ab1d80beb920",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "33a8ac09-e865-4b30-919c-ab1d80beb920"
+        }
       },
       "source": [
         "def add(x,y):\n",
@@ -142,7 +142,7 @@
         "c=add(45,21)\n",
         "print(c)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,11 +228,11 @@
       "metadata": {
         "id": "2AqAi3OncQar",
         "colab_type": "code",
+        "outputId": "ed623dd2-c412-4782-817b-a7dbec7f1a3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "c9157bf2-c97d-4036-b137-d93f747d172d"
+        }
       },
       "source": [
         "def test(x,y):  # x, y 는 변수이므로 함수안에서 얼마든지 출력과 프로그램밍이 가능하다.\n",
@@ -243,7 +243,7 @@
         "a=test(10,40)\n",
         "print(a)"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,11 +260,11 @@
       "metadata": {
         "id": "rninzfRaggdW",
         "colab_type": "code",
+        "outputId": "46d697d9-90cf-44cc-8dfe-c78e0b9d013e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "0abfe07d-66a9-4a03-c8b5-5e986f05855c"
+        }
       },
       "source": [
         "def text_add(x,y):\n",
@@ -274,7 +274,7 @@
         "a=text_add('이','창문')\n",
         "print(a)"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,13 +327,31 @@
       "metadata": {
         "id": "NB9Q92M8cQa0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "e1fe8226-1a33-41bc-d3b6-cac1aac3f696"
       },
       "source": [
-        ""
+        "print(1,2,3)\n",
+        "print(2,4,5)\n",
+        "\n",
+        "print(1,2,3,sep='!!',end='%%')\n",
+        "print(2,4,5)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 2 3\n",
+            "2 4 5\n",
+            "1!!2!!3%%2 4 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -365,13 +383,35 @@
       "metadata": {
         "id": "i7J0NvcncQa-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "13a1579e-0c87-4a3d-dd50-6f9df27a167c"
       },
       "source": [
-        ""
+        "def test(a, b, c=1):\n",
+        "    print(a,b,c)\n",
+        "    \n",
+        "test(10,20,1)\n",
+        "\n",
+        "\n",
+        "def test(a, b=1, c):\n",
+        "    print(a,b,c)\n",
+        "    \n",
+        "test(10,1,20)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-7487f4b2bc78>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    def test(a, b=1, c):\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -390,13 +430,34 @@
       "metadata": {
         "id": "BAacNsCPcQbG",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d6969f27-61fb-4eb8-de73-18e513f483d9"
       },
       "source": [
-        ""
+        "def test(x,y,z):\n",
+        "    a=x+y+z\n",
+        "    return(a)\n",
+        "\n",
+        "test(x=10,y=20,z=3)  # 변수이름(키워드)를 사용하면 순서를 바꾸어도 된다. "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -417,13 +478,209 @@
       "metadata": {
         "id": "uEtKepwAcQbN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "33eb218a-65d8-45cf-80e1-8ab123811315"
       },
       "source": [
-        ""
+        "## 함수는 리턴을 만나면 끝낸다. 함수를 호출하는 쪽으로 값을 전달한다. \n",
+        "\n",
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return x*y\n",
+        "    \n",
+        "    return(x+2)*y\n",
+        "\n",
+        "    \n",
+        "multiply(1,5)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "caIGLWa7gO2W",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a69a9348-7e08-44d0-9fd5-a2f6a150610d"
+      },
+      "source": [
+        "\n",
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return x*y\n",
+        "        \n",
+        "    return(x+2)*y\n",
+        "    print(x+y)          ## 이 코드는 실행이 안된다. 이미 앞에 return에서 함수가 종료되므로 \n",
+        "    \n",
+        "multiply(1,5)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ykcfc0ARgOkp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0a67e2af-d451-4117-958b-80c9c591fe0d"
+      },
+      "source": [
+        "\n",
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return x*y   ## 여기에서 종료된다. 아래 부분 코드는 실행이 안된다. \n",
+        "    \n",
+        "    return(x+2)*y\n",
+        "    print(x+y)\n",
+        "    \n",
+        "multiply(10,5)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "60"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9_YIZGtjg4uT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1d7f614a-6d96-41dd-ee2d-4ada7c9200be"
+      },
+      "source": [
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return          ## 여기에서 return이 실행되고 아무값도 반환하지 않게 된다. \n",
+        "    \n",
+        "    return(x+2)*y\n",
+        "    print(x+y)\n",
+        "    \n",
+        "a=multiply(12,5)\n",
+        "print(a)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V1kK2tYeg4Uw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "582f10f7-dddb-48bd-9f3f-c7e85f76254a"
+      },
+      "source": [
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return x*y\n",
+        "  \n",
+        "    \n",
+        "a=multiply(12,5)\n",
+        "print(a)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "60\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJf05XPPhhv8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "df6040a7-e6ad-461b-814f-3a72603e85c2"
+      },
+      "source": [
+        "def multiply(x,y):\n",
+        "    if x>10:\n",
+        "        return x*y\n",
+        "    \n",
+        "a=multiply(2,5)   # 함수의 모든 로직이 수행되고 함수가 종료된다. \n",
+        "print(a)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -441,13 +698,34 @@
       "metadata": {
         "id": "hh1cWSWScQbQ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "ee6df512-8599-4d40-d871-1afc9cbdbbf4"
       },
       "source": [
-        ""
+        "def add_mul(x,y):\n",
+        "    s=x+y\n",
+        "    m=x*y\n",
+        "    \n",
+        "    return(s,m)\n",
+        "\n",
+        "c=add_mul(3,4)\n",
+        "print(type(c))\n",
+        "print(list(c))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'tuple'>\n",
+            "[7, 12]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -469,13 +747,34 @@
       "metadata": {
         "id": "c-w37kEqcQbU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "11f45cb6-c1fc-4aaf-8012-7b0a16f91c24"
       },
       "source": [
-        ""
+        "num1=10\n",
+        "num2=30\n",
+        "\n",
+        "def test(num1,num2):  ## 여기에 선언된 num1, num2는 함수안에서만 유효-->local 변수라 한다. 함수가 종료되면 local변수는 사라진다. \n",
+        "    print(num1,num2)\n",
+        "    return(num1+num2)\n",
+        "\n",
+        "test(40,50)\n",
+        "print(num1,num2)   ## 이때 1,2행에서 선언된 변수를 global 변수라 한다. 이 변수는 컴퓨터가 살아 있는동안 같이 살아있게 된다. \n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "40 50\n",
+            "10 30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -502,6 +801,98 @@
       "metadata": {
         "id": "G6v06TTjcQbZ",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "bec1be3c-0684-4bef-e929-9bb307626ac5"
+      },
+      "source": [
+        "print()\n",
+        "print(1,2)\n",
+        "print(1,2,3)\n",
+        "print(1,2,3,4)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 2\n",
+            "1 2 3\n",
+            "1 2 3 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DbbabWclkdkt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "207e87c3-6fb7-4138-cfd5-77eb5a3a6f3a"
+      },
+      "source": [
+        "def test(*args):     ## 앞에 별표를 붙이면 가변길이 함수가 된다. 함수 내부적으로는 args를 튜플로 인식한다.\n",
+        "    print(type(args))\n",
+        "    print(args)\n",
+        "   \n",
+        "test(10,30,40)\n"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'tuple'>\n",
+            "(10, 30, 40)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wkxqaXQfkdVn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "0655e33f-d1d0-4f55-9659-9c762a5d7efc"
+      },
+      "source": [
+        "def test(*args):     ## 앞에 별표를 붙이면 가변길이 함수가 된다. 함수 내부적으로는 args를 튜플로 인식한다.\n",
+        "    for item in args:\n",
+        "        print(item)\n",
+        "   \n",
+        "test(10,30,40)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "30\n",
+            "40\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dv8ukz8wkdHs",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
@@ -527,13 +918,63 @@
       "metadata": {
         "id": "YIT1iM6EcQbd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "5fc98f64-20a3-42a5-8601-275c69e3f9ea"
       },
       "source": [
-        ""
+        "def test2(**kwargs):\n",
+        "    print(type(kwargs))\n",
+        "    print(kwargs)\n",
+        "   \n",
+        "test2(a=1,b=2,c=3,name='bob')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'dict'>\n",
+            "{'a': 1, 'b': 2, 'c': 3, 'name': 'bob'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D32EP4gGm2Ob",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "outputId": "4c510110-e845-4ab6-a370-fc688d6b7a04"
+      },
+      "source": [
+        "def test2(**kwargs):\n",
+        "    for key, value in kwargs.items():\n",
+        "        print('key:', key,',value:',value)\n",
+        "   \n",
+        "test2(a=1,b=2,c=3,name='bob',age=90)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "key: a ,value: 1\n",
+            "key: b ,value: 2\n",
+            "key: c ,value: 3\n",
+            "key: name ,value: bob\n",
+            "key: age ,value: 90\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -548,6 +989,97 @@
         " - {} placeholder를 문자열 내에 위치 시킨 후, 해당 위치에 format함수로 전달된 값으로 대체하여 문자열 생성\n",
         " - 포맷 구성은 다음 링크 참조 : https://pyformat.info/"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5-tgL8oQogPL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4dc05086-f310-4cee-8028-94d92fe5e1b0"
+      },
+      "source": [
+        "a='오늘 온도: 30도, 강수확률은:60%'\n",
+        "print(a)"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "오늘 온도: 30도, 강수확률은:60%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iSNdJrUwogCm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9e3f26b4-10e9-46fc-ee60-c7fc04945730"
+      },
+      "source": [
+        "a='오늘 온도: {}도, 강수확률은:{}% 내일온도:{}도' .format(20,50,20)\n",
+        "print(a)"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "오늘 온도: 20도, 강수확률은:50% 내일온도:20도\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_fV_7L3Oof2s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "67d26352-1015-468d-d758-6580eb4ddce2"
+      },
+      "source": [
+        "a='오늘 온도: {today_temp}도, 강수확률은:{today_prob}% 내일온도:{tomorrow_temp}도' .format(tomorrow_temp=25, today_temp=20,today_prob=50)\n",
+        "print(a)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "오늘 온도: 20도, 강수확률은:50% 내일온도:25도\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h8rwSUd4ofmL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
